
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ rtc_dboost_fpd; scalar_t__ pwrctl_init; scalar_t__ clkctl_init; int ck8m_wait; int xtal_wait; int pll_wait; } ;
typedef TYPE_1__ rtc_config_t ;


 int CLEAR_PERI_REG_MASK (int ,int) ;
 int DPORT_APP_CACHE_CTRL1_REG ;
 int DPORT_APP_CACHE_TAG_FORCE_ON ;
 int DPORT_APP_CMMU_FORCE_ON ;
 int DPORT_APP_ROM_FO ;
 int DPORT_CLEAR_PERI_REG_MASK (int ,int ) ;
 int DPORT_PRO_CACHE_CTRL1_REG ;
 int DPORT_PRO_CACHE_TAG_FORCE_ON ;
 int DPORT_PRO_CMMU_FORCE_ON ;
 int DPORT_PRO_ROM_FO ;
 int DPORT_ROM_FO_CTRL_REG ;
 int DPORT_SET_PERI_REG_BITS (int ,int ,int ,int ) ;
 int DPORT_SHARE_ROM_FO ;
 int DPORT_SHARE_ROM_FO_S ;
 int DPORT_SRAM_FO_0 ;
 int DPORT_SRAM_FO_1 ;
 int DPORT_SRAM_FO_CTRL_0_REG ;
 int DPORT_SRAM_FO_CTRL_1_REG ;
 int DPORT_TAG_FO_CTRL_REG ;
 int REG_SET_FIELD (int ,int ,int ) ;
 int RTC_CNTL_ANA_CONF_REG ;
 int RTC_CNTL_BBPLL_FORCE_PU ;
 int RTC_CNTL_BBPLL_I2C_FORCE_PU ;
 int RTC_CNTL_BIAS_CONF_REG ;
 int RTC_CNTL_BIAS_CORE_FOLW_8M ;
 int RTC_CNTL_BIAS_CORE_FORCE_PU ;
 int RTC_CNTL_BIAS_FORCE_NOSLEEP ;
 int RTC_CNTL_BIAS_I2C_FOLW_8M ;
 int RTC_CNTL_BIAS_I2C_FORCE_PU ;
 int RTC_CNTL_BIAS_SLEEP_FOLW_8M ;
 int RTC_CNTL_CK8M_FORCE_PU ;
 int RTC_CNTL_CK8M_WAIT ;
 int RTC_CNTL_CLK_CONF_REG ;
 int RTC_CNTL_CPU_ROM_RAM_FORCE_NOISO ;
 int RTC_CNTL_CPU_ROM_RAM_FORCE_PU ;
 int RTC_CNTL_DBG_ATTEN ;
 int RTC_CNTL_DBG_ATTEN_DEFAULT ;
 int RTC_CNTL_DBIAS_1V10 ;
 int RTC_CNTL_DBIAS_SLP ;
 int RTC_CNTL_DBIAS_WAK ;
 int RTC_CNTL_DBOOST_FORCE_PD ;
 int RTC_CNTL_DBOOST_FORCE_PU ;
 int RTC_CNTL_DEC_HEARTBEAT_WIDTH ;
 int RTC_CNTL_DG_PAD_FORCE_NOISO ;
 int RTC_CNTL_DG_PAD_FORCE_UNHOLD ;
 int RTC_CNTL_DG_WRAP_FORCE_NOISO ;
 int RTC_CNTL_DG_WRAP_FORCE_PU ;
 int RTC_CNTL_DIG_ISO_REG ;
 int RTC_CNTL_DIG_PWC_REG ;
 int RTC_CNTL_FORCE_NOISO ;
 int RTC_CNTL_FORCE_PU ;
 int RTC_CNTL_INC_HEARTBEAT_PERIOD ;
 int RTC_CNTL_LSLP_MEM_FORCE_PU ;
 int RTC_CNTL_MEM_FORCE_NOISO ;
 int RTC_CNTL_MEM_FORCE_PU ;
 int RTC_CNTL_OPTIONS0_REG ;
 int RTC_CNTL_PLLA_FORCE_PD ;
 int RTC_CNTL_PLLA_FORCE_PU ;
 int RTC_CNTL_PLL_BUF_WAIT ;
 int RTC_CNTL_PVTMON_PU ;
 int RTC_CNTL_PWC_FORCE_PU ;
 int RTC_CNTL_PWC_REG ;
 int RTC_CNTL_REG ;
 int RTC_CNTL_TIMER1_REG ;
 int RTC_CNTL_WIFI_FORCE_NOISO ;
 int RTC_CNTL_WIFI_FORCE_PU ;
 int RTC_CNTL_XTL_BUF_WAIT ;
 int RTC_CNTL_XTL_FORCE_PU ;
 int SET_PERI_REG_MASK (int ,int) ;

void rtc_init(rtc_config_t cfg)
{
    CLEAR_PERI_REG_MASK(RTC_CNTL_ANA_CONF_REG, RTC_CNTL_PVTMON_PU);

    REG_SET_FIELD(RTC_CNTL_TIMER1_REG, RTC_CNTL_PLL_BUF_WAIT, cfg.pll_wait);
    REG_SET_FIELD(RTC_CNTL_TIMER1_REG, RTC_CNTL_XTL_BUF_WAIT, cfg.xtal_wait);
    REG_SET_FIELD(RTC_CNTL_TIMER1_REG, RTC_CNTL_CK8M_WAIT, cfg.ck8m_wait);

    REG_SET_FIELD(RTC_CNTL_BIAS_CONF_REG, RTC_CNTL_DBG_ATTEN, RTC_CNTL_DBG_ATTEN_DEFAULT);
    SET_PERI_REG_MASK(RTC_CNTL_BIAS_CONF_REG,
            RTC_CNTL_DEC_HEARTBEAT_WIDTH | RTC_CNTL_INC_HEARTBEAT_PERIOD);


    REG_SET_FIELD(RTC_CNTL_REG, RTC_CNTL_DBIAS_WAK, RTC_CNTL_DBIAS_1V10);
    REG_SET_FIELD(RTC_CNTL_REG, RTC_CNTL_DBIAS_SLP, RTC_CNTL_DBIAS_1V10);

    if (cfg.clkctl_init) {

        DPORT_CLEAR_PERI_REG_MASK(DPORT_PRO_CACHE_CTRL1_REG, DPORT_PRO_CMMU_FORCE_ON);
        DPORT_CLEAR_PERI_REG_MASK(DPORT_APP_CACHE_CTRL1_REG, DPORT_APP_CMMU_FORCE_ON);

        DPORT_SET_PERI_REG_BITS(DPORT_ROM_FO_CTRL_REG, DPORT_SHARE_ROM_FO, 0, DPORT_SHARE_ROM_FO_S);
        DPORT_CLEAR_PERI_REG_MASK(DPORT_ROM_FO_CTRL_REG, DPORT_APP_ROM_FO);
        DPORT_CLEAR_PERI_REG_MASK(DPORT_ROM_FO_CTRL_REG, DPORT_PRO_ROM_FO);

        DPORT_CLEAR_PERI_REG_MASK(DPORT_SRAM_FO_CTRL_0_REG, DPORT_SRAM_FO_0);
        DPORT_CLEAR_PERI_REG_MASK(DPORT_SRAM_FO_CTRL_1_REG, DPORT_SRAM_FO_1);

        DPORT_CLEAR_PERI_REG_MASK(DPORT_TAG_FO_CTRL_REG, DPORT_APP_CACHE_TAG_FORCE_ON);
        DPORT_CLEAR_PERI_REG_MASK(DPORT_TAG_FO_CTRL_REG, DPORT_PRO_CACHE_TAG_FORCE_ON);
    }

    if (cfg.pwrctl_init) {
        CLEAR_PERI_REG_MASK(RTC_CNTL_CLK_CONF_REG, RTC_CNTL_CK8M_FORCE_PU);

        CLEAR_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_XTL_FORCE_PU);

        CLEAR_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BIAS_CORE_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BIAS_I2C_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BIAS_FORCE_NOSLEEP);

        SET_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BIAS_CORE_FOLW_8M);
        SET_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BIAS_I2C_FOLW_8M);
        SET_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BIAS_SLEEP_FOLW_8M);

        CLEAR_PERI_REG_MASK(RTC_CNTL_ANA_CONF_REG, RTC_CNTL_PLLA_FORCE_PU);
        SET_PERI_REG_MASK(RTC_CNTL_ANA_CONF_REG, RTC_CNTL_PLLA_FORCE_PD);
        CLEAR_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BBPLL_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_OPTIONS0_REG, RTC_CNTL_BBPLL_I2C_FORCE_PU);

        CLEAR_PERI_REG_MASK(RTC_CNTL_REG, RTC_CNTL_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_REG, RTC_CNTL_DBOOST_FORCE_PU);
        if (cfg.rtc_dboost_fpd) {
            SET_PERI_REG_MASK(RTC_CNTL_REG, RTC_CNTL_DBOOST_FORCE_PD);
        } else {
            CLEAR_PERI_REG_MASK(RTC_CNTL_REG, RTC_CNTL_DBOOST_FORCE_PD);
        }

        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_PWC_REG, RTC_CNTL_LSLP_MEM_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_PWC_REG, RTC_CNTL_DG_WRAP_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_PWC_REG, RTC_CNTL_WIFI_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_PWC_REG, RTC_CNTL_CPU_ROM_RAM_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_PWC_REG, RTC_CNTL_MEM_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_PWC_REG, RTC_CNTL_PWC_FORCE_PU);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_ISO_REG, RTC_CNTL_DG_WRAP_FORCE_NOISO);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_ISO_REG, RTC_CNTL_WIFI_FORCE_NOISO);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_ISO_REG, RTC_CNTL_CPU_ROM_RAM_FORCE_NOISO);
        CLEAR_PERI_REG_MASK(RTC_CNTL_PWC_REG, RTC_CNTL_MEM_FORCE_NOISO);
        CLEAR_PERI_REG_MASK(RTC_CNTL_PWC_REG, RTC_CNTL_FORCE_NOISO);

        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_ISO_REG, RTC_CNTL_DG_PAD_FORCE_UNHOLD);
        CLEAR_PERI_REG_MASK(RTC_CNTL_DIG_ISO_REG, RTC_CNTL_DG_PAD_FORCE_NOISO);
    }
}
