; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/esp32/extr_rtc_init.c_rtc_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/esp32/extr_rtc_init.c_rtc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64, i32, i32, i32 }

@RTC_CNTL_ANA_CONF_REG = common dso_local global i32 0, align 4
@RTC_CNTL_PVTMON_PU = common dso_local global i32 0, align 4
@RTC_CNTL_TIMER1_REG = common dso_local global i32 0, align 4
@RTC_CNTL_PLL_BUF_WAIT = common dso_local global i32 0, align 4
@RTC_CNTL_XTL_BUF_WAIT = common dso_local global i32 0, align 4
@RTC_CNTL_CK8M_WAIT = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_CONF_REG = common dso_local global i32 0, align 4
@RTC_CNTL_DBG_ATTEN = common dso_local global i32 0, align 4
@RTC_CNTL_DBG_ATTEN_DEFAULT = common dso_local global i32 0, align 4
@RTC_CNTL_DEC_HEARTBEAT_WIDTH = common dso_local global i32 0, align 4
@RTC_CNTL_INC_HEARTBEAT_PERIOD = common dso_local global i32 0, align 4
@RTC_CNTL_REG = common dso_local global i32 0, align 4
@RTC_CNTL_DBIAS_WAK = common dso_local global i32 0, align 4
@RTC_CNTL_DBIAS_1V10 = common dso_local global i32 0, align 4
@RTC_CNTL_DBIAS_SLP = common dso_local global i32 0, align 4
@DPORT_PRO_CACHE_CTRL1_REG = common dso_local global i32 0, align 4
@DPORT_PRO_CMMU_FORCE_ON = common dso_local global i32 0, align 4
@DPORT_APP_CACHE_CTRL1_REG = common dso_local global i32 0, align 4
@DPORT_APP_CMMU_FORCE_ON = common dso_local global i32 0, align 4
@DPORT_ROM_FO_CTRL_REG = common dso_local global i32 0, align 4
@DPORT_SHARE_ROM_FO = common dso_local global i32 0, align 4
@DPORT_SHARE_ROM_FO_S = common dso_local global i32 0, align 4
@DPORT_APP_ROM_FO = common dso_local global i32 0, align 4
@DPORT_PRO_ROM_FO = common dso_local global i32 0, align 4
@DPORT_SRAM_FO_CTRL_0_REG = common dso_local global i32 0, align 4
@DPORT_SRAM_FO_0 = common dso_local global i32 0, align 4
@DPORT_SRAM_FO_CTRL_1_REG = common dso_local global i32 0, align 4
@DPORT_SRAM_FO_1 = common dso_local global i32 0, align 4
@DPORT_TAG_FO_CTRL_REG = common dso_local global i32 0, align 4
@DPORT_APP_CACHE_TAG_FORCE_ON = common dso_local global i32 0, align 4
@DPORT_PRO_CACHE_TAG_FORCE_ON = common dso_local global i32 0, align 4
@RTC_CNTL_CLK_CONF_REG = common dso_local global i32 0, align 4
@RTC_CNTL_CK8M_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_OPTIONS0_REG = common dso_local global i32 0, align 4
@RTC_CNTL_XTL_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_CORE_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_I2C_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_FORCE_NOSLEEP = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_CORE_FOLW_8M = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_I2C_FOLW_8M = common dso_local global i32 0, align 4
@RTC_CNTL_BIAS_SLEEP_FOLW_8M = common dso_local global i32 0, align 4
@RTC_CNTL_PLLA_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_PLLA_FORCE_PD = common dso_local global i32 0, align 4
@RTC_CNTL_BBPLL_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_BBPLL_I2C_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_DBOOST_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_DBOOST_FORCE_PD = common dso_local global i32 0, align 4
@RTC_CNTL_DIG_PWC_REG = common dso_local global i32 0, align 4
@RTC_CNTL_LSLP_MEM_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_DG_WRAP_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_WIFI_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_CPU_ROM_RAM_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_PWC_REG = common dso_local global i32 0, align 4
@RTC_CNTL_MEM_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_PWC_FORCE_PU = common dso_local global i32 0, align 4
@RTC_CNTL_DIG_ISO_REG = common dso_local global i32 0, align 4
@RTC_CNTL_DG_WRAP_FORCE_NOISO = common dso_local global i32 0, align 4
@RTC_CNTL_WIFI_FORCE_NOISO = common dso_local global i32 0, align 4
@RTC_CNTL_CPU_ROM_RAM_FORCE_NOISO = common dso_local global i32 0, align 4
@RTC_CNTL_MEM_FORCE_NOISO = common dso_local global i32 0, align 4
@RTC_CNTL_FORCE_NOISO = common dso_local global i32 0, align 4
@RTC_CNTL_DG_PAD_FORCE_UNHOLD = common dso_local global i32 0, align 4
@RTC_CNTL_DG_PAD_FORCE_NOISO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtc_init(%struct.TYPE_3__* byval(%struct.TYPE_3__) align 8 %0) #0 {
  %2 = load i32, i32* @RTC_CNTL_ANA_CONF_REG, align 4
  %3 = load i32, i32* @RTC_CNTL_PVTMON_PU, align 4
  %4 = call i32 @CLEAR_PERI_REG_MASK(i32 %2, i32 %3)
  %5 = load i32, i32* @RTC_CNTL_TIMER1_REG, align 4
  %6 = load i32, i32* @RTC_CNTL_PLL_BUF_WAIT, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 5
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @REG_SET_FIELD(i32 %5, i32 %6, i32 %8)
  %10 = load i32, i32* @RTC_CNTL_TIMER1_REG, align 4
  %11 = load i32, i32* @RTC_CNTL_XTL_BUF_WAIT, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 4
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @REG_SET_FIELD(i32 %10, i32 %11, i32 %13)
  %15 = load i32, i32* @RTC_CNTL_TIMER1_REG, align 4
  %16 = load i32, i32* @RTC_CNTL_CK8M_WAIT, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @REG_SET_FIELD(i32 %15, i32 %16, i32 %18)
  %20 = load i32, i32* @RTC_CNTL_BIAS_CONF_REG, align 4
  %21 = load i32, i32* @RTC_CNTL_DBG_ATTEN, align 4
  %22 = load i32, i32* @RTC_CNTL_DBG_ATTEN_DEFAULT, align 4
  %23 = call i32 @REG_SET_FIELD(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* @RTC_CNTL_BIAS_CONF_REG, align 4
  %25 = load i32, i32* @RTC_CNTL_DEC_HEARTBEAT_WIDTH, align 4
  %26 = load i32, i32* @RTC_CNTL_INC_HEARTBEAT_PERIOD, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @SET_PERI_REG_MASK(i32 %24, i32 %27)
  %29 = load i32, i32* @RTC_CNTL_REG, align 4
  %30 = load i32, i32* @RTC_CNTL_DBIAS_WAK, align 4
  %31 = load i32, i32* @RTC_CNTL_DBIAS_1V10, align 4
  %32 = call i32 @REG_SET_FIELD(i32 %29, i32 %30, i32 %31)
  %33 = load i32, i32* @RTC_CNTL_REG, align 4
  %34 = load i32, i32* @RTC_CNTL_DBIAS_SLP, align 4
  %35 = load i32, i32* @RTC_CNTL_DBIAS_1V10, align 4
  %36 = call i32 @REG_SET_FIELD(i32 %33, i32 %34, i32 %35)
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  %38 = load i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %69

40:                                               ; preds = %1
  %41 = load i32, i32* @DPORT_PRO_CACHE_CTRL1_REG, align 4
  %42 = load i32, i32* @DPORT_PRO_CMMU_FORCE_ON, align 4
  %43 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %41, i32 %42)
  %44 = load i32, i32* @DPORT_APP_CACHE_CTRL1_REG, align 4
  %45 = load i32, i32* @DPORT_APP_CMMU_FORCE_ON, align 4
  %46 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %44, i32 %45)
  %47 = load i32, i32* @DPORT_ROM_FO_CTRL_REG, align 4
  %48 = load i32, i32* @DPORT_SHARE_ROM_FO, align 4
  %49 = load i32, i32* @DPORT_SHARE_ROM_FO_S, align 4
  %50 = call i32 @DPORT_SET_PERI_REG_BITS(i32 %47, i32 %48, i32 0, i32 %49)
  %51 = load i32, i32* @DPORT_ROM_FO_CTRL_REG, align 4
  %52 = load i32, i32* @DPORT_APP_ROM_FO, align 4
  %53 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %51, i32 %52)
  %54 = load i32, i32* @DPORT_ROM_FO_CTRL_REG, align 4
  %55 = load i32, i32* @DPORT_PRO_ROM_FO, align 4
  %56 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %54, i32 %55)
  %57 = load i32, i32* @DPORT_SRAM_FO_CTRL_0_REG, align 4
  %58 = load i32, i32* @DPORT_SRAM_FO_0, align 4
  %59 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %57, i32 %58)
  %60 = load i32, i32* @DPORT_SRAM_FO_CTRL_1_REG, align 4
  %61 = load i32, i32* @DPORT_SRAM_FO_1, align 4
  %62 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %60, i32 %61)
  %63 = load i32, i32* @DPORT_TAG_FO_CTRL_REG, align 4
  %64 = load i32, i32* @DPORT_APP_CACHE_TAG_FORCE_ON, align 4
  %65 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %63, i32 %64)
  %66 = load i32, i32* @DPORT_TAG_FO_CTRL_REG, align 4
  %67 = load i32, i32* @DPORT_PRO_CACHE_TAG_FORCE_ON, align 4
  %68 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %66, i32 %67)
  br label %69

69:                                               ; preds = %40, %1
  %70 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  %71 = load i64, i64* %70, align 8
  %72 = icmp ne i64 %71, 0
  br i1 %72, label %73, label %167

73:                                               ; preds = %69
  %74 = load i32, i32* @RTC_CNTL_CLK_CONF_REG, align 4
  %75 = load i32, i32* @RTC_CNTL_CK8M_FORCE_PU, align 4
  %76 = call i32 @CLEAR_PERI_REG_MASK(i32 %74, i32 %75)
  %77 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %78 = load i32, i32* @RTC_CNTL_XTL_FORCE_PU, align 4
  %79 = call i32 @CLEAR_PERI_REG_MASK(i32 %77, i32 %78)
  %80 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %81 = load i32, i32* @RTC_CNTL_BIAS_CORE_FORCE_PU, align 4
  %82 = call i32 @CLEAR_PERI_REG_MASK(i32 %80, i32 %81)
  %83 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %84 = load i32, i32* @RTC_CNTL_BIAS_I2C_FORCE_PU, align 4
  %85 = call i32 @CLEAR_PERI_REG_MASK(i32 %83, i32 %84)
  %86 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %87 = load i32, i32* @RTC_CNTL_BIAS_FORCE_NOSLEEP, align 4
  %88 = call i32 @CLEAR_PERI_REG_MASK(i32 %86, i32 %87)
  %89 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %90 = load i32, i32* @RTC_CNTL_BIAS_CORE_FOLW_8M, align 4
  %91 = call i32 @SET_PERI_REG_MASK(i32 %89, i32 %90)
  %92 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %93 = load i32, i32* @RTC_CNTL_BIAS_I2C_FOLW_8M, align 4
  %94 = call i32 @SET_PERI_REG_MASK(i32 %92, i32 %93)
  %95 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %96 = load i32, i32* @RTC_CNTL_BIAS_SLEEP_FOLW_8M, align 4
  %97 = call i32 @SET_PERI_REG_MASK(i32 %95, i32 %96)
  %98 = load i32, i32* @RTC_CNTL_ANA_CONF_REG, align 4
  %99 = load i32, i32* @RTC_CNTL_PLLA_FORCE_PU, align 4
  %100 = call i32 @CLEAR_PERI_REG_MASK(i32 %98, i32 %99)
  %101 = load i32, i32* @RTC_CNTL_ANA_CONF_REG, align 4
  %102 = load i32, i32* @RTC_CNTL_PLLA_FORCE_PD, align 4
  %103 = call i32 @SET_PERI_REG_MASK(i32 %101, i32 %102)
  %104 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %105 = load i32, i32* @RTC_CNTL_BBPLL_FORCE_PU, align 4
  %106 = call i32 @CLEAR_PERI_REG_MASK(i32 %104, i32 %105)
  %107 = load i32, i32* @RTC_CNTL_OPTIONS0_REG, align 4
  %108 = load i32, i32* @RTC_CNTL_BBPLL_I2C_FORCE_PU, align 4
  %109 = call i32 @CLEAR_PERI_REG_MASK(i32 %107, i32 %108)
  %110 = load i32, i32* @RTC_CNTL_REG, align 4
  %111 = load i32, i32* @RTC_CNTL_FORCE_PU, align 4
  %112 = call i32 @CLEAR_PERI_REG_MASK(i32 %110, i32 %111)
  %113 = load i32, i32* @RTC_CNTL_REG, align 4
  %114 = load i32, i32* @RTC_CNTL_DBOOST_FORCE_PU, align 4
  %115 = call i32 @CLEAR_PERI_REG_MASK(i32 %113, i32 %114)
  %116 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %117 = load i64, i64* %116, align 8
  %118 = icmp ne i64 %117, 0
  br i1 %118, label %119, label %123

119:                                              ; preds = %73
  %120 = load i32, i32* @RTC_CNTL_REG, align 4
  %121 = load i32, i32* @RTC_CNTL_DBOOST_FORCE_PD, align 4
  %122 = call i32 @SET_PERI_REG_MASK(i32 %120, i32 %121)
  br label %127

123:                                              ; preds = %73
  %124 = load i32, i32* @RTC_CNTL_REG, align 4
  %125 = load i32, i32* @RTC_CNTL_DBOOST_FORCE_PD, align 4
  %126 = call i32 @CLEAR_PERI_REG_MASK(i32 %124, i32 %125)
  br label %127

127:                                              ; preds = %123, %119
  %128 = load i32, i32* @RTC_CNTL_DIG_PWC_REG, align 4
  %129 = load i32, i32* @RTC_CNTL_LSLP_MEM_FORCE_PU, align 4
  %130 = call i32 @CLEAR_PERI_REG_MASK(i32 %128, i32 %129)
  %131 = load i32, i32* @RTC_CNTL_DIG_PWC_REG, align 4
  %132 = load i32, i32* @RTC_CNTL_DG_WRAP_FORCE_PU, align 4
  %133 = call i32 @CLEAR_PERI_REG_MASK(i32 %131, i32 %132)
  %134 = load i32, i32* @RTC_CNTL_DIG_PWC_REG, align 4
  %135 = load i32, i32* @RTC_CNTL_WIFI_FORCE_PU, align 4
  %136 = call i32 @CLEAR_PERI_REG_MASK(i32 %134, i32 %135)
  %137 = load i32, i32* @RTC_CNTL_DIG_PWC_REG, align 4
  %138 = load i32, i32* @RTC_CNTL_CPU_ROM_RAM_FORCE_PU, align 4
  %139 = call i32 @CLEAR_PERI_REG_MASK(i32 %137, i32 %138)
  %140 = load i32, i32* @RTC_CNTL_PWC_REG, align 4
  %141 = load i32, i32* @RTC_CNTL_MEM_FORCE_PU, align 4
  %142 = call i32 @CLEAR_PERI_REG_MASK(i32 %140, i32 %141)
  %143 = load i32, i32* @RTC_CNTL_PWC_REG, align 4
  %144 = load i32, i32* @RTC_CNTL_PWC_FORCE_PU, align 4
  %145 = call i32 @CLEAR_PERI_REG_MASK(i32 %143, i32 %144)
  %146 = load i32, i32* @RTC_CNTL_DIG_ISO_REG, align 4
  %147 = load i32, i32* @RTC_CNTL_DG_WRAP_FORCE_NOISO, align 4
  %148 = call i32 @CLEAR_PERI_REG_MASK(i32 %146, i32 %147)
  %149 = load i32, i32* @RTC_CNTL_DIG_ISO_REG, align 4
  %150 = load i32, i32* @RTC_CNTL_WIFI_FORCE_NOISO, align 4
  %151 = call i32 @CLEAR_PERI_REG_MASK(i32 %149, i32 %150)
  %152 = load i32, i32* @RTC_CNTL_DIG_ISO_REG, align 4
  %153 = load i32, i32* @RTC_CNTL_CPU_ROM_RAM_FORCE_NOISO, align 4
  %154 = call i32 @CLEAR_PERI_REG_MASK(i32 %152, i32 %153)
  %155 = load i32, i32* @RTC_CNTL_PWC_REG, align 4
  %156 = load i32, i32* @RTC_CNTL_MEM_FORCE_NOISO, align 4
  %157 = call i32 @CLEAR_PERI_REG_MASK(i32 %155, i32 %156)
  %158 = load i32, i32* @RTC_CNTL_PWC_REG, align 4
  %159 = load i32, i32* @RTC_CNTL_FORCE_NOISO, align 4
  %160 = call i32 @CLEAR_PERI_REG_MASK(i32 %158, i32 %159)
  %161 = load i32, i32* @RTC_CNTL_DIG_ISO_REG, align 4
  %162 = load i32, i32* @RTC_CNTL_DG_PAD_FORCE_UNHOLD, align 4
  %163 = call i32 @CLEAR_PERI_REG_MASK(i32 %161, i32 %162)
  %164 = load i32, i32* @RTC_CNTL_DIG_ISO_REG, align 4
  %165 = load i32, i32* @RTC_CNTL_DG_PAD_FORCE_NOISO, align 4
  %166 = call i32 @CLEAR_PERI_REG_MASK(i32 %164, i32 %165)
  br label %167

167:                                              ; preds = %127, %69
  ret void
}

declare dso_local i32 @CLEAR_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @REG_SET_FIELD(i32, i32, i32) #1

declare dso_local i32 @SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @DPORT_CLEAR_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @DPORT_SET_PERI_REG_BITS(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
